--- a/templates/display.html
+++ b/templates/display.html
@@ -10,10 +10,10 @@
     <div class ="page">
     <h2>Informations personnelles</h2>
    <div class = "form">
-    <p><strong>Nom : </strong>{{.FirstName}}</p>
-    <p><strong>Prénom : </strong>{{.LastName}}</p>
-    <p><strong>Date de naissance : </strong>{{.DateOfBirth}}</p>
-    <p><strong>Sexe : </strong>{{.Sex}}</p>
+    <p><strong>Nom : </strong>{{.Nom}}</p>
+    <p><strong>Prénom : </strong>{{.Prenom}}</p>
+    <p><strong>Date de naissance : </strong>{{.Anniversaire}}</p>
+    <p><strong>Sexe : </strong>{{.Sexe}}</p>
 </div>
 </div>
 </body>
