--- a/templates/init.html
+++ b/templates/init.html
@@ -13,20 +13,20 @@
 <div class = "form">
     <form action="/templates/treatment" method="post">
         <div class = "nom">
-            <label for="first_name"><strong>Nom :</strong></label>
-            <input type="text" name="first_name" required><br>
+            <label for="nom"><strong>Nom :</strong></label>
+            <input type="text" name="nom"><br>
         </div>
         <div class = prenom>
-            <label for="last_name"><strong>Prénom :</strong></label>
-            <input type="text" name="last_name" required><br>
+            <label for="prenom"><strong>Prénom :</strong></label>
+            <input type="text" name="prenom"><br>
         </div>
         <div class = birth>
-            <label for="date_of_birth"><strong>Date de naissance :</strong></label>
-            <input type="date" name="date_of_birth" required><br>
+            <label for="birthday"><strong>Date de naissance :</strong></label>
+            <input type="date" name="birthday"><br>
         </div>
         <div class = sexe>
-            <label for="sex"><strong>Sexe :</strong></label>
-            <select name="sex" required>
+            <label for="sexe"><strong>Sexe :</strong></label>
+            <select name="sexe">
                 <option value="Homme">Homme</option>
                 <option value="Femme">Femme</option>
             </select><br>
